[package]
name = "fly-into-the-maelstrom"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
derive_more = { version = "1.0.0", features = ["from"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
serde_with = "3.9.0"

[[bin]]
name = "echo"
path = "src/bin/echo.rs"

[[bin]]
name = "unique-ids"
path = "src/bin/unique_ids.rs"

[[bin]]
name = "broadcast"
path = "src/bin/broadcast.rs"

[[bin]]
name = "g-counter"
path = "src/bin/g_counter.rs"
